# first_pygame

./: .gitignore  README.md  pyproject.toml
src/first_game/: game.py
